<?xml version="1.0"?>
<package format="2">
  <name>search_and_rescue_sim</name>
  <version>0.0.0</version>
  <description>The search_and_rescue_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="evana@todo.todo">evana</maintainer>

  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- 
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend> -->
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rospy</build_depend>
  <!-- 
  <build_export_depend>baxter_core_msgs</build_export_depend>
  <build_export_depend>baxter_gazebo</build_export_depend>
  <build_export_depend>baxter_interface</build_export_depend>
  <build_export_depend>baxter_tools</build_export_depend> -->
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospack</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!--
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_gazebo</exec_depend>
  <exec_depend>baxter_interface</exec_depend>
  <exec_depend>baxter_tools</exec_depend> -->
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>rospy</exec_depend>

<!--   <export>
  </export> -->
</package>
